chore: use consistent double quotes in sass

--- a/dev/src/assets/styles/main.sass
+++ b/dev/src/assets/styles/main.sass
@@ -1,6 +1,6 @@
 @use "variables" as *
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap')
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap")
 
 .sv-page
   &--padded
