feat: move CSS color and typography tokens in defaults layer

--- a/lib/src/style/base/index.sass
+++ b/lib/src/style/base/index.sass
@@ -1,10 +1,11 @@
-@use "_colors"
-@use "_typography"
 @use "_screen"
 
 @layer reset, defaults, general, components, themes
 
-@layer reset
+@layer defaults
+  @import "_colors"
+  @import "_typography"
+
   :root
     color-scheme: light dark
     /* Prevent tap highlight on iOS */
