--- a/dev/src/assets/styles/smartvui.sass
+++ b/dev/src/assets/styles/smartvui.sass
@@ -1,4 +1,6 @@
 @import "$lib/style/base/index.sass"
+
+// @import "$lib/style/tokens/colors.sass"
 @import "$lib/style/tokens/typography.sass"
-@import "$lib/style/tokens/colors.sass"
+
 @import "$lib/style/color-themes/index.sass"
