feat: add CSS elevation and shape tokens

--- a/dev/src/assets/styles/smartvui.sass
+++ b/dev/src/assets/styles/smartvui.sass
@@ -1,6 +1,8 @@
 @import "$lib/style/base/index.sass"
 
 // @import "$lib/style/tokens/colors.sass"
+@import "$lib/style/tokens/elevations.sass"
+@import "$lib/style/tokens/shapes.sass"
 @import "$lib/style/tokens/typography.sass"
 
 @import "$lib/style/color-themes/index.sass"
