chore: use --sv prefixed CSS variables

--- a/lib/src/components/SvElevation/index.sass
+++ b/lib/src/components/SvElevation/index.sass
@@ -10,7 +10,7 @@
     transition-property: box-shadow, opacity
     transition-timing-function: cubic-bezier(0.2, 0, 0, 1)
     --level: var(--sv-elevation-level, 0)
-    --shadow-color: var(--sv-elevation-color, var(--md-sys-color-shadow, #000))
+    --shadow-color: var(--sv-elevation-shadow-color, var(--sv-sys-color-shadow, #000))
 
     &:before,
     &:after
