--- a/lib/src/style/base/_colors.sass
+++ b/lib/src/style/base/_colors.sass
@@ -2,154 +2,154 @@
   background-color: transparent
 
 .sv-primary
-  background-color: var(--md-sys-color-primary)
+  background-color: var(--sv-sys-color-primary)
 
 .sv-primary--text
-  color: var(--md-sys-color-primary)
+  color: var(--sv-sys-color-primary)
 
 .sv-on-primary
-  color: var(--md-sys-color-on-primary)
+  color: var(--sv-sys-color-on-primary)
 
 .sv-primary-container
-  background-color: var(--md-sys-color-primary-container)
+  background-color: var(--sv-sys-color-primary-container)
 
 .sv-on-primary-container
-  color: var(--md-sys-color-on-primary-container)
+  color: var(--sv-sys-color-on-primary-container)
 
 .sv-primary-fixed
-  background-color: var(--md-sys-color-primary-fixed)
+  background-color: var(--sv-sys-color-primary-fixed)
 
 .sv-primary-fixed-dim
-  background-color: var(--md-sys-color-primary-fixed-dim)
+  background-color: var(--sv-sys-color-primary-fixed-dim)
 
 .sv-on-primary-fixed
-  color: var(--md-sys-color-on-primary-fixed)
+  color: var(--sv-sys-color-on-primary-fixed)
 
 .sv-on-primary-fixed-variant
-  color: var(--md-sys-color-on-primary-fixed-variant)
+  color: var(--sv-sys-color-on-primary-fixed-variant)
 
 .sv-secondary
-  background-color: var(--md-sys-color-secondary)
+  background-color: var(--sv-sys-color-secondary)
 
 .sv-secondary--text
-  color: var(--md-sys-color-secondary)
+  color: var(--sv-sys-color-secondary)
 
 .sv-on-secondary
-  color: var(--md-sys-color-on-secondary)
+  color: var(--sv-sys-color-on-secondary)
 
 .sv-secondary-container
-  background-color: var(--md-sys-color-secondary-container)
+  background-color: var(--sv-sys-color-secondary-container)
 
 .sv-on-secondary-container
-  color: var(--md-sys-color-on-secondary-container)
+  color: var(--sv-sys-color-on-secondary-container)
 
 .sv-secondary-fixed
-  background-color: var(--md-sys-color-secondary-fixed)
+  background-color: var(--sv-sys-color-secondary-fixed)
 
 .sv-secondary-fixed-dim
-  background-color: var(--md-sys-color-secondary-fixed-dim)
+  background-color: var(--sv-sys-color-secondary-fixed-dim)
 
 .sv-on-secondary-fixed
-  color: var(--md-sys-color-on-secondary-fixed)
+  color: var(--sv-sys-color-on-secondary-fixed)
 
 .sv-on-secondary-fixed-variant
-  color: var(--md-sys-color-on-secondary-fixed-variant)
+  color: var(--sv-sys-color-on-secondary-fixed-variant)
 
 .sv-tertiary
-  background-color: var(--md-sys-color-tertiary)
+  background-color: var(--sv-sys-color-tertiary)
 
 .sv-tertiary--text
-  color: var(--md-sys-color-tertiary)
+  color: var(--sv-sys-color-tertiary)
 
 .sv-on-tertiary
-  color: var(--md-sys-color-on-tertiary)
+  color: var(--sv-sys-color-on-tertiary)
 
 .sv-tertiary-container
-  background-color: var(--md-sys-color-tertiary-container)
+  background-color: var(--sv-sys-color-tertiary-container)
 
 .sv-on-tertiary-container
-  color: var(--md-sys-color-on-tertiary-container)
+  color: var(--sv-sys-color-on-tertiary-container)
 
 .sv-tertiary-fixed
-  background-color: var(--md-sys-color-tertiary-fixed)
+  background-color: var(--sv-sys-color-tertiary-fixed)
 
 .sv-tertiary-fixed-dim
-  background-color: var(--md-sys-color-tertiary-fixed-dim)
+  background-color: var(--sv-sys-color-tertiary-fixed-dim)
 
 .sv-on-tertiary-fixed
-  color: var(--md-sys-color-on-tertiary-fixed)
+  color: var(--sv-sys-color-on-tertiary-fixed)
 
 .sv-on-tertiary-fixed-variant
-  color: var(--md-sys-color-on-tertiary-fixed-variant)
+  color: var(--sv-sys-color-on-tertiary-fixed-variant)
 
 .sv-error
-  background-color: var(--md-sys-color-error)
+  background-color: var(--sv-sys-color-error)
 
 .sv-error--text
-  color: var(--md-sys-color-error)
+  color: var(--sv-sys-color-error)
 
 .sv-on-error
-  color: var(--md-sys-color-on-error)
+  color: var(--sv-sys-color-on-error)
 
 .sv-error-container
-  background-color: var(--md-sys-color-error-container)
+  background-color: var(--sv-sys-color-error-container)
 
 .sv-on-error-container
-  color: var(--md-sys-color-on-error-container)
+  color: var(--sv-sys-color-on-error-container)
 
 .sv-outline
-  border-color: var(--md-sys-color-outline)
+  border-color: var(--sv-sys-color-outline)
 
 .sv-outline-variant
-  border-color: var(--md-sys-color-outline-variant)
+  border-color: var(--sv-sys-color-outline-variant)
 
 .sv-inverse-surface
-  background-color: var(--md-sys-color-inverse-surface)
+  background-color: var(--sv-sys-color-inverse-surface)
 
 .sv-inverse-on-surface
-  color: var(--md-sys-color-inverse-on-surface)
+  color: var(--sv-sys-color-inverse-on-surface)
 
 .sv-inverse-primary
-  color: var(--md-sys-color-inverse-primary)
+  color: var(--sv-sys-color-inverse-primary)
 
 .sv-shadow
-  background-color: var(--md-sys-color-shadow)
+  background-color: var(--sv-sys-color-shadow)
 
 .sv-scrim
-  background-color: var(--md-sys-color-scrim)
+  background-color: var(--sv-sys-color-scrim)
 
 .sv-background
-  background-color: var(--md-sys-color-background)
+  background-color: var(--sv-sys-color-background)
 
 .sv-on-background
-  color: var(--md-sys-color-on-background)
+  color: var(--sv-sys-color-on-background)
 
 .sv-surface-dim
-  background-color: var(--md-sys-color-surface-dim)
+  background-color: var(--sv-sys-color-surface-dim)
 
 .sv-surface
-  background-color: var(--md-sys-color-surface)
+  background-color: var(--sv-sys-color-surface)
 
 .sv-surface-bright
-  background-color: var(--md-sys-color-surface-bright)
+  background-color: var(--sv-sys-color-surface-bright)
 
 .sv-surface-container-lowest
-  background-color: var(--md-sys-color-surface-container-lowest)
+  background-color: var(--sv-sys-color-surface-container-lowest)
 
 .sv-surface-container-low
-  background-color: var(--md-sys-color-surface-container-low)
+  background-color: var(--sv-sys-color-surface-container-low)
 
 .sv-surface-container
-  background-color: var(--md-sys-color-surface-container)
+  background-color: var(--sv-sys-color-surface-container)
 
 .sv-surface-container-high
-  background-color: var(--md-sys-color-surface-container-high)
+  background-color: var(--sv-sys-color-surface-container-high)
 
 .sv-surface-container-highest
-  background-color: var(--md-sys-color-surface-container-highest)
+  background-color: var(--sv-sys-color-surface-container-highest)
 
 .sv-on-surface
-  color: var(--md-sys-color-on-surface)
+  color: var(--sv-sys-color-on-surface)
 
 .sv-on-surface-variant
-  color: var(--md-sys-color-on-surface-variant)
+  color: var(--sv-sys-color-on-surface-variant)
