--- a/lib/src/style/color-themes/_dark-mixin.sass
+++ b/lib/src/style/color-themes/_dark-mixin.sass
@@ -1,50 +1,50 @@
 @mixin color-scheme
-  --md-sys-color-primary: var(--md-sys-color-primary-dark)
-  --md-sys-color-on-primary: var(--md-sys-color-on-primary-dark)
-  --md-sys-color-primary-container: var(--md-sys-color-primary-container-dark)
-  --md-sys-color-on-primary-container: var(--md-sys-color-on-primary-container-dark)
-  --md-sys-color-primary-fixed: var(--md-sys-color-primary-fixed-dark)
-  --md-sys-color-on-primary-fixed: var(--md-sys-color-on-primary-fixed-dark)
-  --md-sys-color-primary-fixed-dim: var(--md-sys-color-primary-fixed-dim-dark)
-  --md-sys-color-on-primary-fixed-variant: var(--md-sys-color-on-primary-fixed-variant-dark)
-  --md-sys-color-secondary: var(--md-sys-color-secondary-dark)
-  --md-sys-color-on-secondary: var(--md-sys-color-on-secondary-dark)
-  --md-sys-color-secondary-container: var(--md-sys-color-secondary-container-dark)
-  --md-sys-color-on-secondary-container: var(--md-sys-color-on-secondary-container-dark)
-  --md-sys-color-secondary-fixed: var(--md-sys-color-secondary-fixed-dark)
-  --md-sys-color-on-secondary-fixed: var(--md-sys-color-on-secondary-fixed-dark)
-  --md-sys-color-secondary-fixed-dim: var(--md-sys-color-secondary-fixed-dim-dark)
-  --md-sys-color-on-secondary-fixed-variant: var(--md-sys-color-on-secondary-fixed-variant-dark)
-  --md-sys-color-tertiary: var(--md-sys-color-tertiary-dark)
-  --md-sys-color-on-tertiary: var(--md-sys-color-on-tertiary-dark)
-  --md-sys-color-tertiary-container: var(--md-sys-color-tertiary-container-dark)
-  --md-sys-color-on-tertiary-container: var(--md-sys-color-on-tertiary-container-dark)
-  --md-sys-color-tertiary-fixed: var(--md-sys-color-tertiary-fixed-dark)
-  --md-sys-color-on-tertiary-fixed: var(--md-sys-color-on-tertiary-fixed-dark)
-  --md-sys-color-tertiary-fixed-dim: var(--md-sys-color-tertiary-fixed-dim-dark)
-  --md-sys-color-on-tertiary-fixed-variant: var(--md-sys-color-on-tertiary-fixed-variant-dark)
-  --md-sys-color-error: var(--md-sys-color-error-dark)
-  --md-sys-color-error-container: var(--md-sys-color-error-container-dark)
-  --md-sys-color-on-error: var(--md-sys-color-on-error-dark)
-  --md-sys-color-on-error-container: var(--md-sys-color-on-error-container-dark)
-  --md-sys-color-background: var(--md-sys-color-background-dark)
-  --md-sys-color-on-background: var(--md-sys-color-on-background-dark)
-  --md-sys-color-outline: var(--md-sys-color-outline-dark)
-  --md-sys-color-inverse-on-surface: var(--md-sys-color-inverse-on-surface-dark)
-  --md-sys-color-inverse-surface: var(--md-sys-color-inverse-surface-dark)
-  --md-sys-color-inverse-primary: var(--md-sys-color-inverse-primary-dark)
-  --md-sys-color-shadow: var(--md-sys-color-shadow-dark)
-  --md-sys-color-surface-tint: var(--md-sys-color-surface-tint-dark)
-  --md-sys-color-outline-variant: var(--md-sys-color-outline-variant-dark)
-  --md-sys-color-scrim: var(--md-sys-color-scrim-dark)
-  --md-sys-color-surface: var(--md-sys-color-surface-dark)
-  --md-sys-color-on-surface: var(--md-sys-color-on-surface-dark)
-  --md-sys-color-surface-variant: var(--md-sys-color-surface-variant-dark)
-  --md-sys-color-on-surface-variant: var(--md-sys-color-on-surface-variant-dark)
-  --md-sys-color-surface-container-highest: var(--md-sys-color-surface-container-highest-dark)
-  --md-sys-color-surface-container-high: var(--md-sys-color-surface-container-high-dark)
-  --md-sys-color-surface-container: var(--md-sys-color-surface-container-dark)
-  --md-sys-color-surface-container-low: var(--md-sys-color-surface-container-low-dark)
-  --md-sys-color-surface-container-lowest: var(--md-sys-color-surface-container-lowest-dark)
-  --md-sys-color-surface-dim: var(--md-sys-color-surface-dim-dark)
-  --md-sys-color-surface-bright: var(--md-sys-color-surface-bright-dark)
+  --sv-sys-color-primary: var(--sv-sys-color-primary-dark)
+  --sv-sys-color-on-primary: var(--sv-sys-color-on-primary-dark)
+  --sv-sys-color-primary-container: var(--sv-sys-color-primary-container-dark)
+  --sv-sys-color-on-primary-container: var(--sv-sys-color-on-primary-container-dark)
+  --sv-sys-color-primary-fixed: var(--sv-sys-color-primary-fixed-dark)
+  --sv-sys-color-on-primary-fixed: var(--sv-sys-color-on-primary-fixed-dark)
+  --sv-sys-color-primary-fixed-dim: var(--sv-sys-color-primary-fixed-dim-dark)
+  --sv-sys-color-on-primary-fixed-variant: var(--sv-sys-color-on-primary-fixed-variant-dark)
+  --sv-sys-color-secondary: var(--sv-sys-color-secondary-dark)
+  --sv-sys-color-on-secondary: var(--sv-sys-color-on-secondary-dark)
+  --sv-sys-color-secondary-container: var(--sv-sys-color-secondary-container-dark)
+  --sv-sys-color-on-secondary-container: var(--sv-sys-color-on-secondary-container-dark)
+  --sv-sys-color-secondary-fixed: var(--sv-sys-color-secondary-fixed-dark)
+  --sv-sys-color-on-secondary-fixed: var(--sv-sys-color-on-secondary-fixed-dark)
+  --sv-sys-color-secondary-fixed-dim: var(--sv-sys-color-secondary-fixed-dim-dark)
+  --sv-sys-color-on-secondary-fixed-variant: var(--sv-sys-color-on-secondary-fixed-variant-dark)
+  --sv-sys-color-tertiary: var(--sv-sys-color-tertiary-dark)
+  --sv-sys-color-on-tertiary: var(--sv-sys-color-on-tertiary-dark)
+  --sv-sys-color-tertiary-container: var(--sv-sys-color-tertiary-container-dark)
+  --sv-sys-color-on-tertiary-container: var(--sv-sys-color-on-tertiary-container-dark)
+  --sv-sys-color-tertiary-fixed: var(--sv-sys-color-tertiary-fixed-dark)
+  --sv-sys-color-on-tertiary-fixed: var(--sv-sys-color-on-tertiary-fixed-dark)
+  --sv-sys-color-tertiary-fixed-dim: var(--sv-sys-color-tertiary-fixed-dim-dark)
+  --sv-sys-color-on-tertiary-fixed-variant: var(--sv-sys-color-on-tertiary-fixed-variant-dark)
+  --sv-sys-color-error: var(--sv-sys-color-error-dark)
+  --sv-sys-color-error-container: var(--sv-sys-color-error-container-dark)
+  --sv-sys-color-on-error: var(--sv-sys-color-on-error-dark)
+  --sv-sys-color-on-error-container: var(--sv-sys-color-on-error-container-dark)
+  --sv-sys-color-background: var(--sv-sys-color-background-dark)
+  --sv-sys-color-on-background: var(--sv-sys-color-on-background-dark)
+  --sv-sys-color-outline: var(--sv-sys-color-outline-dark)
+  --sv-sys-color-inverse-on-surface: var(--sv-sys-color-inverse-on-surface-dark)
+  --sv-sys-color-inverse-surface: var(--sv-sys-color-inverse-surface-dark)
+  --sv-sys-color-inverse-primary: var(--sv-sys-color-inverse-primary-dark)
+  --sv-sys-color-shadow: var(--sv-sys-color-shadow-dark)
+  --sv-sys-color-surface-tint: var(--sv-sys-color-surface-tint-dark)
+  --sv-sys-color-outline-variant: var(--sv-sys-color-outline-variant-dark)
+  --sv-sys-color-scrim: var(--sv-sys-color-scrim-dark)
+  --sv-sys-color-surface: var(--sv-sys-color-surface-dark)
+  --sv-sys-color-on-surface: var(--sv-sys-color-on-surface-dark)
+  --sv-sys-color-surface-variant: var(--sv-sys-color-surface-variant-dark)
+  --sv-sys-color-on-surface-variant: var(--sv-sys-color-on-surface-variant-dark)
+  --sv-sys-color-surface-container-highest: var(--sv-sys-color-surface-container-highest-dark)
+  --sv-sys-color-surface-container-high: var(--sv-sys-color-surface-container-high-dark)
+  --sv-sys-color-surface-container: var(--sv-sys-color-surface-container-dark)
+  --sv-sys-color-surface-container-low: var(--sv-sys-color-surface-container-low-dark)
+  --sv-sys-color-surface-container-lowest: var(--sv-sys-color-surface-container-lowest-dark)
+  --sv-sys-color-surface-dim: var(--sv-sys-color-surface-dim-dark)
+  --sv-sys-color-surface-bright: var(--sv-sys-color-surface-bright-dark)
