--- a/lib/src/style/color-themes/_light-mixin.sass
+++ b/lib/src/style/color-themes/_light-mixin.sass
@@ -1,50 +1,50 @@
 @mixin color-scheme
-  --md-sys-color-primary: var(--md-sys-color-primary-light)
-  --md-sys-color-on-primary: var(--md-sys-color-on-primary-light)
-  --md-sys-color-primary-container: var(--md-sys-color-primary-container-light)
-  --md-sys-color-on-primary-container: var(--md-sys-color-on-primary-container-light)
-  --md-sys-color-primary-fixed: var(--md-sys-color-primary-fixed-light)
-  --md-sys-color-on-primary-fixed: var(--md-sys-color-on-primary-fixed-light)
-  --md-sys-color-primary-fixed-dim: var(--md-sys-color-primary-fixed-dim-light)
-  --md-sys-color-on-primary-fixed-variant: var(--md-sys-color-on-primary-fixed-variant-light)
-  --md-sys-color-secondary: var(--md-sys-color-secondary-light)
-  --md-sys-color-on-secondary: var(--md-sys-color-on-secondary-light)
-  --md-sys-color-secondary-container: var(--md-sys-color-secondary-container-light)
-  --md-sys-color-on-secondary-container: var(--md-sys-color-on-secondary-container-light)
-  --md-sys-color-secondary-fixed: var(--md-sys-color-secondary-fixed-light)
-  --md-sys-color-on-secondary-fixed: var(--md-sys-color-on-secondary-fixed-light)
-  --md-sys-color-secondary-fixed-dim: var(--md-sys-color-secondary-fixed-dim-light)
-  --md-sys-color-on-secondary-fixed-variant: var(--md-sys-color-on-secondary-fixed-variant-light)
-  --md-sys-color-tertiary: var(--md-sys-color-tertiary-light)
-  --md-sys-color-on-tertiary: var(--md-sys-color-on-tertiary-light)
-  --md-sys-color-tertiary-container: var(--md-sys-color-tertiary-container-light)
-  --md-sys-color-on-tertiary-container: var(--md-sys-color-on-tertiary-container-light)
-  --md-sys-color-tertiary-fixed: var(--md-sys-color-tertiary-fixed-light)
-  --md-sys-color-on-tertiary-fixed: var(--md-sys-color-on-tertiary-fixed-light)
-  --md-sys-color-tertiary-fixed-dim: var(--md-sys-color-tertiary-fixed-dim-light)
-  --md-sys-color-on-tertiary-fixed-variant: var(--md-sys-color-on-tertiary-fixed-variant-light)
-  --md-sys-color-error: var(--md-sys-color-error-light)
-  --md-sys-color-error-container: var(--md-sys-color-error-container-light)
-  --md-sys-color-on-error: var(--md-sys-color-on-error-light)
-  --md-sys-color-on-error-container: var(--md-sys-color-on-error-container-light)
-  --md-sys-color-background: var(--md-sys-color-background-light)
-  --md-sys-color-on-background: var(--md-sys-color-on-background-light)
-  --md-sys-color-outline: var(--md-sys-color-outline-light)
-  --md-sys-color-inverse-on-surface: var(--md-sys-color-inverse-on-surface-light)
-  --md-sys-color-inverse-surface: var(--md-sys-color-inverse-surface-light)
-  --md-sys-color-inverse-primary: var(--md-sys-color-inverse-primary-light)
-  --md-sys-color-shadow: var(--md-sys-color-shadow-light)
-  --md-sys-color-surface-tint: var(--md-sys-color-surface-tint-light)
-  --md-sys-color-outline-variant: var(--md-sys-color-outline-variant-light)
-  --md-sys-color-scrim: var(--md-sys-color-scrim-light)
-  --md-sys-color-surface: var(--md-sys-color-surface-light)
-  --md-sys-color-on-surface: var(--md-sys-color-on-surface-light)
-  --md-sys-color-surface-variant: var(--md-sys-color-surface-variant-light)
-  --md-sys-color-on-surface-variant: var(--md-sys-color-on-surface-variant-light)
-  --md-sys-color-surface-container-highest: var(--md-sys-color-surface-container-highest-light)
-  --md-sys-color-surface-container-high: var(--md-sys-color-surface-container-high-light)
-  --md-sys-color-surface-container: var(--md-sys-color-surface-container-light)
-  --md-sys-color-surface-container-low: var(--md-sys-color-surface-container-low-light)
-  --md-sys-color-surface-container-lowest: var(--md-sys-color-surface-container-lowest-light)
-  --md-sys-color-surface-dim: var(--md-sys-color-surface-dim-light)
-  --md-sys-color-surface-bright: var(--md-sys-color-surface-bright-light)
+  --sv-sys-color-primary: var(--sv-sys-color-primary-light)
+  --sv-sys-color-on-primary: var(--sv-sys-color-on-primary-light)
+  --sv-sys-color-primary-container: var(--sv-sys-color-primary-container-light)
+  --sv-sys-color-on-primary-container: var(--sv-sys-color-on-primary-container-light)
+  --sv-sys-color-primary-fixed: var(--sv-sys-color-primary-fixed-light)
+  --sv-sys-color-on-primary-fixed: var(--sv-sys-color-on-primary-fixed-light)
+  --sv-sys-color-primary-fixed-dim: var(--sv-sys-color-primary-fixed-dim-light)
+  --sv-sys-color-on-primary-fixed-variant: var(--sv-sys-color-on-primary-fixed-variant-light)
+  --sv-sys-color-secondary: var(--sv-sys-color-secondary-light)
+  --sv-sys-color-on-secondary: var(--sv-sys-color-on-secondary-light)
+  --sv-sys-color-secondary-container: var(--sv-sys-color-secondary-container-light)
+  --sv-sys-color-on-secondary-container: var(--sv-sys-color-on-secondary-container-light)
+  --sv-sys-color-secondary-fixed: var(--sv-sys-color-secondary-fixed-light)
+  --sv-sys-color-on-secondary-fixed: var(--sv-sys-color-on-secondary-fixed-light)
+  --sv-sys-color-secondary-fixed-dim: var(--sv-sys-color-secondary-fixed-dim-light)
+  --sv-sys-color-on-secondary-fixed-variant: var(--sv-sys-color-on-secondary-fixed-variant-light)
+  --sv-sys-color-tertiary: var(--sv-sys-color-tertiary-light)
+  --sv-sys-color-on-tertiary: var(--sv-sys-color-on-tertiary-light)
+  --sv-sys-color-tertiary-container: var(--sv-sys-color-tertiary-container-light)
+  --sv-sys-color-on-tertiary-container: var(--sv-sys-color-on-tertiary-container-light)
+  --sv-sys-color-tertiary-fixed: var(--sv-sys-color-tertiary-fixed-light)
+  --sv-sys-color-on-tertiary-fixed: var(--sv-sys-color-on-tertiary-fixed-light)
+  --sv-sys-color-tertiary-fixed-dim: var(--sv-sys-color-tertiary-fixed-dim-light)
+  --sv-sys-color-on-tertiary-fixed-variant: var(--sv-sys-color-on-tertiary-fixed-variant-light)
+  --sv-sys-color-error: var(--sv-sys-color-error-light)
+  --sv-sys-color-error-container: var(--sv-sys-color-error-container-light)
+  --sv-sys-color-on-error: var(--sv-sys-color-on-error-light)
+  --sv-sys-color-on-error-container: var(--sv-sys-color-on-error-container-light)
+  --sv-sys-color-background: var(--sv-sys-color-background-light)
+  --sv-sys-color-on-background: var(--sv-sys-color-on-background-light)
+  --sv-sys-color-outline: var(--sv-sys-color-outline-light)
+  --sv-sys-color-inverse-on-surface: var(--sv-sys-color-inverse-on-surface-light)
+  --sv-sys-color-inverse-surface: var(--sv-sys-color-inverse-surface-light)
+  --sv-sys-color-inverse-primary: var(--sv-sys-color-inverse-primary-light)
+  --sv-sys-color-shadow: var(--sv-sys-color-shadow-light)
+  --sv-sys-color-surface-tint: var(--sv-sys-color-surface-tint-light)
+  --sv-sys-color-outline-variant: var(--sv-sys-color-outline-variant-light)
+  --sv-sys-color-scrim: var(--sv-sys-color-scrim-light)
+  --sv-sys-color-surface: var(--sv-sys-color-surface-light)
+  --sv-sys-color-on-surface: var(--sv-sys-color-on-surface-light)
+  --sv-sys-color-surface-variant: var(--sv-sys-color-surface-variant-light)
+  --sv-sys-color-on-surface-variant: var(--sv-sys-color-on-surface-variant-light)
+  --sv-sys-color-surface-container-highest: var(--sv-sys-color-surface-container-highest-light)
+  --sv-sys-color-surface-container-high: var(--sv-sys-color-surface-container-high-light)
+  --sv-sys-color-surface-container: var(--sv-sys-color-surface-container-light)
+  --sv-sys-color-surface-container-low: var(--sv-sys-color-surface-container-low-light)
+  --sv-sys-color-surface-container-lowest: var(--sv-sys-color-surface-container-lowest-light)
+  --sv-sys-color-surface-dim: var(--sv-sys-color-surface-dim-light)
+  --sv-sys-color-surface-bright: var(--sv-sys-color-surface-bright-light)
