feat: add initial SvCard implementation with accesory SvLayer{Elevation,FocusIndicator,Outline,State}

--- a/dev/src/assets/styles/smartvui.sass
+++ b/dev/src/assets/styles/smartvui.sass
@@ -2,7 +2,9 @@
 
 // @import "$lib/style/tokens/colors.sass"
 @import "$lib/style/tokens/elevations.sass"
+@import "$lib/style/tokens/motion.sass"
 @import "$lib/style/tokens/shapes.sass"
+@import "$lib/style/tokens/state.sass"
 @import "$lib/style/tokens/typography.sass"
 
 @import "$lib/style/color-themes/index.sass"
