--- a/lib/src/components/SvRipple/index.sass
+++ b/lib/src/components/SvRipple/index.sass
@@ -6,20 +6,20 @@
     contain: strict
     pointer-events: none
 
-    i
+    :where(i)
       position: absolute
       display: block
       block-size: 100%
       inline-size: 100%
       opacity: 0
-      background-image: radial-gradient(circle, currentColor 10%, transparent 10.01%)
+      background-image: radial-gradient(circle, var(--sv-ripple-color, currentColor) 10%, transparent 10.01%)
       background-repeat: no-repeat
       inset-inline-start: calc(var(--sv-ripple-x, 0) - 50%)
       inset-block-start: calc(var(--sv-ripple-y, 0) - 50%)
       transform: scale(20, 20)
       transition: transform 1s, opacity 1s
 
-      &.sv-ripple--active
-        opacity: var(--sv-state-pressed-state-layer-opacity, var(--sv-sys-state-pressed-state-layer-opacity, .12))
-        transform: scale(0, 0)
-        transition: 0s
+    :where(i.sv-ripple--active)
+      opacity: var(--sv-ripple-opacity, var(--sv-sys-state-pressed-ripple-opacity))
+      transform: scale(0, 0)
+      transition: 0s
