--- a/lib/src/components/SvRipple/index.sass
+++ b/lib/src/components/SvRipple/index.sass
@@ -4,7 +4,8 @@
     position: absolute
     display: block
     inset: 0
-    contain: strict
+    border-radius: inherit
+    overflow: hidden
     pointer-events: none
 
     :where(i)
