chore: rename tokens to `sv-bg--` for bg, `sv-c--` for color, `sv-t--` for text

--- a/lib/src/style/base/_typography.sass
+++ b/lib/src/style/base/_typography.sass
@@ -1,4 +1,4 @@
-.sv-display-large
+.sv-t--display-large
   font-family: var(--sv-sys-typescale-display-large-font-family-name)
   font-style: var(--sv-sys-typescale-display-large-font-family-style)
   font-weight: var(--sv-sys-typescale-display-large-font-weight)
@@ -8,7 +8,7 @@
   text-transform: var(--sv-sys-typescale-display-large-text-transform)
   text-decoration: var(--sv-sys-typescale-display-large-text-decoration)
 
-.sv-display-medium
+.sv-t--display-medium
   font-family: var(--sv-sys-typescale-display-medium-font-family-name)
   font-style: var(--sv-sys-typescale-display-medium-font-family-style)
   font-weight: var(--sv-sys-typescale-display-medium-font-weight)
@@ -18,7 +18,7 @@
   text-transform: var(--sv-sys-typescale-display-medium-text-transform)
   text-decoration: var(--sv-sys-typescale-display-medium-text-decoration)
 
-.sv-display-small
+.sv-t--display-small
   font-family: var(--sv-sys-typescale-display-small-font-family-name)
   font-style: var(--sv-sys-typescale-display-small-font-family-style)
   font-weight: var(--sv-sys-typescale-display-small-font-weight)
@@ -28,7 +28,7 @@
   text-transform: var(--sv-sys-typescale-display-small-text-transform)
   text-decoration: var(--sv-sys-typescale-display-small-text-decoration)
 
-.sv-headline-large
+.sv-t--headline-large
   font-family: var(--sv-sys-typescale-headline-large-font-family-name)
   font-style: var(--sv-sys-typescale-headline-large-font-family-style)
   font-weight: var(--sv-sys-typescale-headline-large-font-weight)
@@ -38,7 +38,7 @@
   text-transform: var(--sv-sys-typescale-headline-large-text-transform)
   text-decoration: var(--sv-sys-typescale-headline-large-text-decoration)
 
-.sv-headline-medium
+.sv-t--headline-medium
   font-family: var(--sv-sys-typescale-headline-medium-font-family-name)
   font-style: var(--sv-sys-typescale-headline-medium-font-family-style)
   font-weight: var(--sv-sys-typescale-headline-medium-font-weight)
@@ -48,7 +48,7 @@
   text-transform: var(--sv-sys-typescale-headline-medium-text-transform)
   text-decoration: var(--sv-sys-typescale-headline-medium-text-decoration)
 
-.sv-headline-small
+.sv-t--headline-small
   font-family: var(--sv-sys-typescale-headline-small-font-family-name)
   font-style: var(--sv-sys-typescale-headline-small-font-family-style)
   font-weight: var(--sv-sys-typescale-headline-small-font-weight)
@@ -58,7 +58,7 @@
   text-transform: var(--sv-sys-typescale-headline-small-text-transform)
   text-decoration: var(--sv-sys-typescale-headline-small-text-decoration)
 
-.sv-body-large
+.sv-t--body-large
   font-family: var(--sv-sys-typescale-body-large-font-family-name)
   font-style: var(--sv-sys-typescale-body-large-font-family-style)
   font-weight: var(--sv-sys-typescale-body-large-font-weight)
@@ -68,7 +68,7 @@
   text-transform: var(--sv-sys-typescale-body-large-text-transform)
   text-decoration: var(--sv-sys-typescale-body-large-text-decoration)
 
-.sv-body-medium
+.sv-t--body-medium
   font-family: var(--sv-sys-typescale-body-medium-font-family-name)
   font-style: var(--sv-sys-typescale-body-medium-font-family-style)
   font-weight: var(--sv-sys-typescale-body-medium-font-weight)
@@ -78,7 +78,7 @@
   text-transform: var(--sv-sys-typescale-body-medium-text-transform)
   text-decoration: var(--sv-sys-typescale-body-medium-text-decoration)
 
-.sv-body-small
+.sv-t--body-small
   font-family: var(--sv-sys-typescale-body-small-font-family-name)
   font-style: var(--sv-sys-typescale-body-small-font-family-style)
   font-weight: var(--sv-sys-typescale-body-small-font-weight)
@@ -88,7 +88,7 @@
   text-transform: var(--sv-sys-typescale-body-small-text-transform)
   text-decoration: var(--sv-sys-typescale-body-small-text-decoration)
 
-.sv-label-large
+.sv-t--label-large
   font-family: var(--sv-sys-typescale-label-large-font-family-name)
   font-style: var(--sv-sys-typescale-label-large-font-family-style)
   font-weight: var(--sv-sys-typescale-label-large-font-weight)
@@ -98,7 +98,7 @@
   text-transform: var(--sv-sys-typescale-label-large-text-transform)
   text-decoration: var(--sv-sys-typescale-label-large-text-decoration)
 
-.sv-label-medium
+.sv-t--label-medium
   font-family: var(--sv-sys-typescale-label-medium-font-family-name)
   font-style: var(--sv-sys-typescale-label-medium-font-family-style)
   font-weight: var(--sv-sys-typescale-label-medium-font-weight)
@@ -108,7 +108,7 @@
   text-transform: var(--sv-sys-typescale-label-medium-text-transform)
   text-decoration: var(--sv-sys-typescale-label-medium-text-decoration)
 
-.sv-label-small
+.sv-t--label-small
   font-family: var(--sv-sys-typescale-label-small-font-family-name)
   font-style: var(--sv-sys-typescale-label-small-font-family-style)
   font-weight: var(--sv-sys-typescale-label-small-font-weight)
@@ -118,7 +118,7 @@
   text-transform: var(--sv-sys-typescale-label-small-text-transform)
   text-decoration: var(--sv-sys-typescale-label-small-text-decoration)
 
-.sv-title-large
+.sv-t--title-large
   font-family: var(--sv-sys-typescale-title-large-font-family-name)
   font-style: var(--sv-sys-typescale-title-large-font-family-style)
   font-weight: var(--sv-sys-typescale-title-large-font-weight)
@@ -128,7 +128,7 @@
   text-transform: var(--sv-sys-typescale-title-large-text-transform)
   text-decoration: var(--sv-sys-typescale-title-large-text-decoration)
 
-.sv-title-medium
+.sv-t--title-medium
   font-family: var(--sv-sys-typescale-title-medium-font-family-name)
   font-style: var(--sv-sys-typescale-title-medium-font-family-style)
   font-weight: var(--sv-sys-typescale-title-medium-font-weight)
@@ -138,7 +138,7 @@
   text-transform: var(--sv-sys-typescale-title-medium-text-transform)
   text-decoration: var(--sv-sys-typescale-title-medium-text-decoration)
 
-.sv-title-small
+.sv-t--title-small
   font-family: var(--sv-sys-typescale-title-small-font-family-name)
   font-style: var(--sv-sys-typescale-title-small-font-family-style)
   font-weight: var(--sv-sys-typescale-title-small-font-weight)
