--- a/lib/src/style/base/_colors.sass
+++ b/lib/src/style/base/_colors.sass
@@ -1,143 +1,134 @@
-.sv-transparent
-  background-color: transparent
+.sv-bg
+  &--transparent
+    background-color: transparent
 
-.sv-primary
-  background-color: var(--sv-sys-color-primary)
+  &--primary
+    background-color: var(--sv-sys-color-primary)
 
-.sv-primary--text
-  color: var(--sv-sys-color-primary)
+  &--primary-container
+    background-color: var(--sv-sys-color-primary-container)
 
-.sv-on-primary
-  color: var(--sv-sys-color-on-primary)
+  &--primary-fixed
+    background-color: var(--sv-sys-color-primary-fixed)
 
-.sv-primary-container
-  background-color: var(--sv-sys-color-primary-container)
+  &--primary-fixed-dim
+    background-color: var(--sv-sys-color-primary-fixed-dim)
 
-.sv-on-primary-container
-  color: var(--sv-sys-color-on-primary-container)
+  &--secondary
+    background-color: var(--sv-sys-color-secondary)
 
-.sv-primary-fixed
-  background-color: var(--sv-sys-color-primary-fixed)
+  &--secondary-container
+    background-color: var(--sv-sys-color-secondary-container)
 
-.sv-primary-fixed-dim
-  background-color: var(--sv-sys-color-primary-fixed-dim)
+  &--secondary-fixed
+    background-color: var(--sv-sys-color-secondary-fixed)
 
-.sv-on-primary-fixed
-  color: var(--sv-sys-color-on-primary-fixed)
+  &--secondary-fixed-dim
+    background-color: var(--sv-sys-color-secondary-fixed-dim)
 
-.sv-on-primary-fixed-variant
-  color: var(--sv-sys-color-on-primary-fixed-variant)
+  &--tertiary
+    background-color: var(--sv-sys-color-tertiary)
 
-.sv-secondary
-  background-color: var(--sv-sys-color-secondary)
+  &--tertiary-container
+    background-color: var(--sv-sys-color-tertiary-container)
 
-.sv-secondary--text
-  color: var(--sv-sys-color-secondary)
+  &--tertiary-fixed
+    background-color: var(--sv-sys-color-tertiary-fixed)
 
-.sv-on-secondary
-  color: var(--sv-sys-color-on-secondary)
+  &--tertiary-fixed-dim
+    background-color: var(--sv-sys-color-tertiary-fixed-dim)
 
-.sv-secondary-container
-  background-color: var(--sv-sys-color-secondary-container)
+  &--error
+    background-color: var(--sv-sys-color-error)
 
-.sv-on-secondary-container
-  color: var(--sv-sys-color-on-secondary-container)
+  &--error-container
+    background-color: var(--sv-sys-color-error-container)
 
-.sv-secondary-fixed
-  background-color: var(--sv-sys-color-secondary-fixed)
+  &--inverse-surface
+    background-color: var(--sv-sys-color-inverse-surface)
 
-.sv-secondary-fixed-dim
-  background-color: var(--sv-sys-color-secondary-fixed-dim)
+  &--background
+    background-color: var(--sv-sys-color-background)
 
-.sv-on-secondary-fixed
-  color: var(--sv-sys-color-on-secondary-fixed)
+  &--surface-dim
+    background-color: var(--sv-sys-color-surface-dim)
 
-.sv-on-secondary-fixed-variant
-  color: var(--sv-sys-color-on-secondary-fixed-variant)
+  &--surface
+    background-color: var(--sv-sys-color-surface)
 
-.sv-tertiary
-  background-color: var(--sv-sys-color-tertiary)
+  &--surface-bright
+    background-color: var(--sv-sys-color-surface-bright)
 
-.sv-tertiary--text
-  color: var(--sv-sys-color-tertiary)
+  &--surface-container-lowest
+    background-color: var(--sv-sys-color-surface-container-lowest)
 
-.sv-on-tertiary
-  color: var(--sv-sys-color-on-tertiary)
+  &--surface-container-low
+    background-color: var(--sv-sys-color-surface-container-low)
 
-.sv-tertiary-container
-  background-color: var(--sv-sys-color-tertiary-container)
+  &--surface-container
+    background-color: var(--sv-sys-color-surface-container)
 
-.sv-on-tertiary-container
-  color: var(--sv-sys-color-on-tertiary-container)
+  &--surface-container-high
+    background-color: var(--sv-sys-color-surface-container-high)
 
-.sv-tertiary-fixed
-  background-color: var(--sv-sys-color-tertiary-fixed)
+  &--surface-container-highest
+    background-color: var(--sv-sys-color-surface-container-highest)
 
-.sv-tertiary-fixed-dim
-  background-color: var(--sv-sys-color-tertiary-fixed-dim)
+.sv-c
+  &--on-primary
+    color: var(--sv-sys-color-on-primary)
 
-.sv-on-tertiary-fixed
-  color: var(--sv-sys-color-on-tertiary-fixed)
+  &--on-primary-container
+    color: var(--sv-sys-color-on-primary-container)
 
-.sv-on-tertiary-fixed-variant
-  color: var(--sv-sys-color-on-tertiary-fixed-variant)
+  &--on-primary-fixed
+    color: var(--sv-sys-color-on-primary-fixed)
 
-.sv-error
-  background-color: var(--sv-sys-color-error)
+  &--on-primary-fixed-variant
+    color: var(--sv-sys-color-on-primary-fixed-variant)
 
-.sv-error--text
-  color: var(--sv-sys-color-error)
+  &--on-secondary
+    color: var(--sv-sys-color-on-secondary)
 
-.sv-on-error
-  color: var(--sv-sys-color-on-error)
+  &--on-secondary-container
+    color: var(--sv-sys-color-on-secondary-container)
 
-.sv-error-container
-  background-color: var(--sv-sys-color-error-container)
+  &--on-secondary-fixed
+    color: var(--sv-sys-color-on-secondary-fixed)
 
-.sv-on-error-container
-  color: var(--sv-sys-color-on-error-container)
+  &--on-secondary-fixed-variant
+    color: var(--sv-sys-color-on-secondary-fixed-variant)
 
-.sv-inverse-surface
-  background-color: var(--sv-sys-color-inverse-surface)
+  &--on-tertiary
+    color: var(--sv-sys-color-on-tertiary)
 
-.sv-inverse-on-surface
-  color: var(--sv-sys-color-inverse-on-surface)
+  &--on-tertiary-container
+    color: var(--sv-sys-color-on-tertiary-container)
 
-.sv-inverse-primary
-  color: var(--sv-sys-color-inverse-primary)
+  &--on-tertiary-fixed
+    color: var(--sv-sys-color-on-tertiary-fixed)
 
-.sv-background
-  background-color: var(--sv-sys-color-background)
+  &--on-tertiary-fixed-variant
+    color: var(--sv-sys-color-on-tertiary-fixed-variant)
 
-.sv-on-background
-  color: var(--sv-sys-color-on-background)
+  &--on-error
+    color: var(--sv-sys-color-on-error)
 
-.sv-surface-dim
-  background-color: var(--sv-sys-color-surface-dim)
+  &--on-error-container
+    color: var(--sv-sys-color-on-error-container)
 
-.sv-surface
-  background-color: var(--sv-sys-color-surface)
+  &--inverse-on-surface
+    color: var(--sv-sys-color-inverse-on-surface)
 
-.sv-surface-bright
-  background-color: var(--sv-sys-color-surface-bright)
+  &--inverse-primary
+    color: var(--sv-sys-color-inverse-primary)
 
-.sv-surface-container-lowest
-  background-color: var(--sv-sys-color-surface-container-lowest)
+  &--on-background
+    color: var(--sv-sys-color-on-background)
 
-.sv-surface-container-low
-  background-color: var(--sv-sys-color-surface-container-low)
+  &--on-surface
+    color: var(--sv-sys-color-on-surface)
 
-.sv-surface-container
-  background-color: var(--sv-sys-color-surface-container)
+  &--on-surface-variant
+    color: var(--sv-sys-color-on-surface-variant)
 
-.sv-surface-container-high
-  background-color: var(--sv-sys-color-surface-container-high)
-
-.sv-surface-container-highest
-  background-color: var(--sv-sys-color-surface-container-highest)
-
-.sv-on-surface
-  color: var(--sv-sys-color-on-surface)
-
-.sv-on-surface-variant
-  color: var(--sv-sys-color-on-surface-variant)
