feat: inherit border radius in SvCard `layer-bottom`

--- a/lib/src/components/SvCard/index.sass
+++ b/lib/src/components/SvCard/index.sass
@@ -29,6 +29,7 @@
     &__layer-bottom
       position: absolute
       inset: 0
+      border-radius: inherit
       pointer-events: none
 
     &__layer-content
