fix: use inline-size instead of width in SvSurface CSS

--- a/lib/src/components/SvSurfacePopover/index.sass
+++ b/lib/src/components/SvSurfacePopover/index.sass
@@ -3,7 +3,7 @@
   .sv-surface-popover
     position: absolute
     inset: 0 auto auto 0
-    width: max-content
+    inline-size: max-content
     max-inline-size: calc(100% - 2em - 6px)
     max-block-size: calc(100% - 2em - 6px)
     padding: 0
