--- a/lib/src/components/SvSurfaceModal/index.sass
+++ b/lib/src/components/SvSurfaceModal/index.sass
@@ -3,7 +3,7 @@
   .sv-surface-modal
     position: fixed
     inset: 0
-    width: max-content
+    inline-size: max-content
     max-inline-size: calc(100% - 2em - 6px)
     max-block-size: calc(100% - 2em - 6px)
     padding: 0
