--- a/lib/src/components/SvCard/index.sass
+++ b/lib/src/components/SvCard/index.sass
@@ -8,8 +8,6 @@
     --default-layer-outline-thickness: 0
     --default-layer-outline-opacity: 0
 
-    --sv-layer-elevation-color-shadow: var(--sv-layer-elevation-color-shadow, var(--sv-comp-card-layer-elevation-color-shadow, var(--sv-sys-color-shadow)))
-
     // reset for `button`
     border: none
     outline: none
@@ -23,7 +21,6 @@
     padding: 0
     text-align: start
     border-radius: var(--sv-shape-corner, var(--sv-comp-card-shape-corner, var(--sv-sys-shape-corner-medium)))
-    z-index: 0
     transform-style: preserve-3d
 
     &__layer-bottom
@@ -48,8 +45,17 @@
     > :where(.sv-ripple)
       --sv-ripple-color: var(--sv-state-pressed-ripple-color, var(--sv-comp-card-state-pressed-ripple-color, var(--sv-sys-color-on-surface)))
 
+    > :where(.sv-layer-elevation)
+      --sv-layer-elevation-opacity: 1
+      --sv-layer-elevation-level: var(--sv-layer-elevation-level, var(--sv-comp-card-layer-elevation-level, var(--default-layer-elevation-level)))
+      --sv-layer-elevation-active-opacity: 0
+      --sv-layer-elevation-active-level: clamp(0, calc(1 + var(--sv-layer-elevation-level)), 5)
+      --sv-layer-elevation-color-shadow: var(--sv-layer-elevation-color-shadow, var(--sv-comp-card-layer-elevation-color-shadow, var(--sv-sys-color-shadow)))
+
     &:where(.sv-card--enabled)
-      --sv-layer-elevation-level: var(--sv-state-enabled-layer-elevation-level, var(--sv-comp-card-state-enabled-layer-elevation-level, var(--default-layer-elevation-level)))
+      > :where(.sv-layer-elevation)
+        --sv-layer-elevation-level: var(--sv-state-enabled-layer-elevation-level, var(--sv-comp-card-state-enabled-layer-elevation-level, var(--default-layer-elevation-level)))
+
       > :where(.sv-layer-container)
         --sv-layer-container-color-surface: var(--sv-state-enabled-layer-container-color-surface, var(--sv-comp-card-state-enabled-layer-container-color-surface, var(--default-layer-container-color-surface)))
 
@@ -59,9 +65,11 @@
         --sv-layer-outline-opacity: var(--sv-state-enabled-layer-outline-opacity, var(--sv-comp-card-state-enabled-layer-outline-opacity, var(--default-layer-outline-opacity)))
 
     &:where(.sv-card--disabled)
-      --sv-layer-elevation-level: var(--sv-state-disabled-layer-elevation-level, var(--sv-comp-card-state-disabled-layer-elevation-level, var(--default-layer-elevation-level)))
       opacity: var(--sv-state-disabled-container-opacity, var(--sv-comp-card-state-disabled-container-opacity, var(--sv-sys-state-disabled-container-opacity)))
       cursor: not-allowed
+
+      > :where(.sv-layer-elevation)
+        --sv-layer-elevation-level: var(--sv-state-disabled-layer-elevation-level, var(--sv-comp-card-state-disabled-layer-elevation-level, var(--default-layer-elevation-level)))
 
       > :where(.sv-layer-container)
         --sv-layer-container-color-surface: var(--sv-state-disabled-layer-container-color-surface, var(--sv-comp-card-state-disabled-layer-container-color-surface, var(--default-layer-container-color-surface)))
@@ -73,7 +81,9 @@
 
     @media (hover: hover)
       &:where(.sv-card--interactive:hover)
-        --sv-layer-elevation-level: var(--sv-state-hovered-layer-elevation-level, var(--sv-comp-card-state-hovered-layer-elevation-level, calc(1 + var(--default-layer-elevation-level))))
+        > :where(.sv-layer-elevation)
+          --sv-layer-elevation-opacity: 0
+          --sv-layer-elevation-active-opacity: 1
 
         > :where(.sv-layer-outline)
           --sv-layer-outline-color: var(--sv-state-hovered-layer-outline-color, var(--sv-comp-card-state-hovered-layer-outline-color, var(--default-layer-outline-color)))
@@ -85,7 +95,9 @@
           --sv-layer-state-opacity: var(--sv-state-hovered-layer-state-opacity, var(--sv-comp-card-state-hovered-layer-state-opacity, var(--sv-sys-state-hovered-layer-state-opacity)))
 
     &:where(.sv-card--interactive:focus-visible)
-      --sv-layer-elevation-level: var(--sv-state-focused-layer-elevation-level, var(--sv-comp-card-state-focused-layer-elevation-level, var(--default-layer-elevation-level)))
+      > :where(.sv-layer-elevation)
+        --sv-layer-elevation-opacity: 1
+        --sv-layer-elevation-active-opacity: 0
 
       > :where(.sv-layer-focus-indicator)
         --sv-layer-focus-indicator-color: var(--sv-state-focused-layer-focus-indicator-color, var(--sv-comp-card-state-focused-layer-focus-indicator-color, var(--sv-sys-color-secondary)))
@@ -93,7 +105,9 @@
         --sv-layer-focus-indicator-outer-offset: var(--sv-state-focused-layer-focus-indicator-outer-offset, var(--sv-comp-card-state-focused-layer-focus-indicator-outer-offset, var(--sv-sys-state-focused-layer-focus-indicator-outer-offset)))
 
     &:where(.sv-card--interactive:not(.sv-card--pointer-pressed):focus-within)
-      --sv-layer-elevation-level: var(--sv-state-focused-layer-elevation-level, var(--sv-comp-card-state-focused-layer-elevation-level, var(--default-layer-elevation-level)))
+      > :where(.sv-layer-elevation)
+        --sv-layer-elevation-opacity: 1
+        --sv-layer-elevation-active-opacity: 0
 
       > :where(.sv-layer-outline)
         --sv-layer-outline-color: var(--sv-state-focused-layer-outline-color, var(--sv-comp-card-state-focused-layer-outline-color, var(--default-layer-outline-color)))
@@ -105,7 +119,9 @@
         --sv-layer-state-opacity: var(--sv-state-focused-layer-state-opacity, var(--sv-comp-card-state-focused-layer-state-opacity, var(--sv-sys-state-focused-layer-state-opacity)))
 
     &:where(.sv-card--interactive:active)
-      --sv-layer-elevation-level: var(--sv-state-pressed-layer-elevation-level, var(--sv-comp-card-state-pressed-layer-elevation-level, var(--default-layer-elevation-level)))
+      > :where(.sv-layer-elevation)
+        --sv-layer-elevation-opacity: 1
+        --sv-layer-elevation-active-opacity: 0
 
       > :where(.sv-layer-outline)
         --sv-layer-outline-color: var(--sv-state-pressed-layer-outline-color, var(--sv-comp-card-state-pressed-layer-outline-color, var(--default-layer-outline-color)))
@@ -117,7 +133,10 @@
         --sv-layer-state-opacity: var(--sv-state-pressed-layer-state-opacity, var(--sv-comp-card-state-pressed-layer-state-opacity, var(--sv-sys-state-pressed-layer-state-opacity)))
 
     &:where(.sv-card--interactive.sv-card--dragged)
-      --sv-layer-elevation-level: var(--sv-state-dragged-layer-elevation-level, var(--sv-comp-card-state-dragged-layer-elevation-level, clamp(0, calc(3 + var(--default-layer-elevation-level)), 5)))
+      > :where(.sv-layer-elevation)
+        --sv-layer-elevation-opacity: 0
+        --sv-layer-elevation-active-opacity: 1
+        --sv-layer-elevation-active-level: clamp(0, calc(3 + var(--sv-layer-elevation-level)), 5)
 
       > :where(.sv-layer-outline)
         --sv-layer-outline-color: var(--sv-state-dragged-layer-outline-color, var(--sv-comp-card-state-dragged-layer-outline-color, var(--default-layer-outline-color)))
