--- a/lib/src/components/SvLayerState/index.sass
+++ b/lib/src/components/SvLayerState/index.sass
@@ -7,8 +7,8 @@
     pointer-events: none
     z-index: -1
     border-radius: inherit
-    transition-property: background-color, opacity
-    transition-duration: var(--sv-layer-state-motion-duration, var(--sv-sys-motion-duration-long4))
+    transition-property: opacity
+    transition-duration: var(--sv-layer-state-motion-duration, var(--sv-sys-motion-duration-medium1))
     transition-timing-function: var(--sv-layer-state-motion-timing-function, var(--sv-sys-motion-easing-emphasized))
     background-color: var(--sv-layer-state-color-surface, transparent)
     opacity: var(--sv-layer-state-opacity, 0)
