--- a/lib/src/components/SvCardActions/index.sass
+++ b/lib/src/components/SvCardActions/index.sass
@@ -3,7 +3,7 @@
   .sv-card-actions
     display: flex
     gap: .5rem // TODO
-    padding: 8px
+    padding: calc(var(--sv-content-padding) / 2)
     margin-inline: 0
 
     &--align-start
