--- a/lib/src/components/SvCardFooter/index.sass
+++ b/lib/src/components/SvCardFooter/index.sass
@@ -2,7 +2,7 @@
 @layer components
   .sv-card-footer
     display: flex
-    padding: 0 16px 16px 16px
+    padding: var(--sv-content-padding)
     margin-inline: 0
 
     &--vertical
