--- a/lib/src/components/SvCardHeader/index.sass
+++ b/lib/src/components/SvCardHeader/index.sass
@@ -2,7 +2,8 @@
 @layer components
   .sv-card-header
     display: flex
-    padding: 16px 16px 0 16px
+    padding-inline: var(--sv-content-padding)
+    padding-block-start: var(--sv-content-padding)
     margin-inline: 0
 
     &--vertical
