--- a/lib/src/components/SvCardContent/index.sass
+++ b/lib/src/components/SvCardContent/index.sass
@@ -3,8 +3,11 @@
   .sv-card-content
     display: flex
     flex-direction: column
-    padding: 0 16px 0 16px
+    padding-inline: var(--sv-content-padding)
     margin-inline: 0
+    max-inline-size: 100%
+    max-block-size: 100%
+    overflow: auto
 
     &--vertical
       grid-column: full
@@ -17,4 +20,7 @@
     > :where(img, video)
       width: calc(100% + 32px)
       max-width: calc(100% + 32px)
-      margin-inline: -16px
+      margin-inline: calc(-1 * var(--sv-content-padding))
+
+    > :where(:last-child)
+      margin-block-end: 0
